force-app/main/default/objects/Invoice__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
  <fullName>Amount_Due__c</fullName>
  <label>Amount Due</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>
MAX(
  BLANKVALUE(Total_Amount__c, 0) -
  BLANKVALUE(Payments_Applied__c, 0) -
  BLANKVALUE(Deposits_Applied__c, 0) -
  BLANKVALUE(Credits_Applied__c, 0),
  0
)
  </formula>
</CustomField>