force-app/main/default/objects/Invoice__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Business_Unit_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>