force-app/main/default/objects/Invoice__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Contract_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>