force-app/main/default/objects/Invoice__c/fields/Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credits_Applied__c</fullName>
    <label>Credits Applied</label>
    <summaryFilterItems>
        <field>Credit_Memo_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Memo_Application__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Credit_Memo_Application__c.Amount__c</summarizedField>
    <type>Summary</type>
</CustomField>