force-app/main/default/objects/Invoice__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
  <fullName>Discount_Amount__c</fullName>
  <label>Discount Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>
IF(
  ISPICKVAL(Status__c, "Voided"),
  0,
  MIN(
    Subtotal__c,
    ROUND(
      CASE(TEXT(Discount_Type__c),
        "Fixed",      BLANKVALUE(Discount_Value__c,0),
        "Percentage", Subtotal__c * (BLANKVALUE(Discount_Value__c,0)/100),
        0
      ),
      2
    )
  )
)
  </formula>
</CustomField>