force-app/main/default/objects/Invoice__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Document_Template_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>