force-app/main/default/objects/Invoice__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
  <fullName>Gross_Margin__c</fullName>
  <label>Gross Margin</label>
  <type>Percent</type>
  <precision>5</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>
IF(
  (Total_Price__c - BLANKVALUE(Discount_Amount__c,0)) &gt; 0,
  (
    (Total_Price__c - BLANKVALUE(Discount_Amount__c,0)) - BLANKVALUE(Total_Cost__c,0)
  ) / (Total_Price__c - BLANKVALUE(Discount_Amount__c,0)),
  0
)
  </formula>
</CustomField>