force-app/main/default/objects/Invoice__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Retainage</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>