force-app/main/default/objects/Invoice__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
  <fullName>Is_Overdue__c</fullName>
  <label>Is Overdue</label>
  <type>Checkbox</type>
  <formula>
AND(
  NOT(ISBLANK(Due_Date__c)),
  Amount_Due__c &lt; 0,
  Due_Date__c &lt; TODAY(),
  OR(
    ISPICKVAL(Status__c,"Open"),
    ISPICKVAL(Status__c,"Partially Paid")
  )
)
  </formula>
</CustomField>