force-app/main/default/objects/Invoice__c/fields/Payments_Applied__c.field-meta.xml
<CustomField>
    <fullName>Payments_Applied__c</fullName>
    <label>Payments Applied</label>
    <summaryFilterItems>
        <field>Payment_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Application__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Payment_Application__c.Amount__c</summarizedField>
    <type>Summary</type>
</CustomField>