force-app/main/default/objects/Invoice__c/fields/Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Posting_Status__c</fullName>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Unposted</fullName><default>true</default><label>Unposted</label></value>
            <value><fullName>Posted</fullName><default>false</default><label>Posted</label></value>
            <value><fullName>Unposted_Adjust</fullName><default>false</default><label>Unposted Adjust</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>