force-app/main/default/objects/Invoice__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Price_Book_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>