force-app/main/default/objects/Invoice__c/fields/Public_Hash__c.field-meta.xml
<CustomField>
    <fullName>Public_Hash__c</fullName>
    <description>Opaque token for portal/guest access to this invoice.</description>
    <label>Public Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>