force-app/main/default/objects/Invoice__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <label>Service Address</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Service Address Invoices</relationshipLabel>
    <relationshipName>Service_Address_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>