force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Awaiting Approval</fullName><default>false</default><label>Awaiting Approval</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
            <value><fullName>Partially Paid</fullName><default>false</default><label>Partially Paid</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>Voided</fullName><default>false</default><label>Voided</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>