force-app/main/default/objects/Invoice__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Subscription_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>