force-app/main/default/objects/Invoice__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
  <fullName>Tax_Amount__c</fullName>
  <label>Tax Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>
ROUND(Taxable_Subtotal__c * BLANKVALUE(Tax_Rate__c, 0), 2)
  </formula>
</CustomField>