force-app/main/default/objects/Invoice__c/fields/Total_Discounts__c.field-meta.xml
<CustomField>
  <fullName>Total_Discounts__c</fullName>
  <label>Total Discounts</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>
MAX(Subtotal__c - Total_Price__c, 0) + BLANKVALUE(Discount_Amount__c, 0)
  </formula>
</CustomField>